--- a/style.css
+++ b/style.css
@@ -21,3 +21,84 @@
   cursor: pointer;
   margin: 10px;
 }
+.box-play-monster {
+  width: 400px;
+  height: 100%;
+  border: 2px solid #000;
+  margin-top: 20px;
+  text-align: center;
+  padding: 10px;
+}
+.health-box {
+  width: 95%;
+  height: 90px;
+  border: 1px solid #333;
+  border-radius: 10px;
+  box-shadow: #333;
+  padding: 10px;
+  margin-bottom: 10px;
+  p {
+    font-weight: bold;
+    margin: 10px;
+  }
+}
+.health-value-all {
+  width: 100%;
+  height: 40px;
+  background-color: #fee3e0;
+  border: 1px solid #333;
+}
+
+.health-value {
+  width: 100%;
+  height: 100%;
+  background-color: #008c6b;
+}
+
+.button-list {
+  margin-left: 150px;
+  button {
+    display: block;
+    width: 100px;
+    height: 40px;
+    margin: 5px 0 15px 0;
+    border-radius: 5px;
+    border: 1px solid #861152;
+    cursor: pointer;
+    background-color: #861152;
+    color: #fff;
+  }
+}
+.operation-log {
+  width: 95%;
+  border: 1px solid #333;
+  border-radius: 10px;
+  ul {
+    list-style: none;
+  }
+}
+
+.disabledbutton {
+  background-color: #c5c5c5;
+}
+.restart-button {
+  display: block;
+  width: 100px;
+  height: 30px;
+  margin-left: 140px;
+  border-radius: 5px;
+  border: 1px solid #007bff;
+  cursor: pointer;
+  background-color: #007bff;
+  color: #fff;
+}
+.game-result {
+  width: 95%;
+  height: 110px;
+  border: 1px solid #333;
+  border-radius: 10px;
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 10px;
+  font-size: 20px;
+}
